--- a/frontend/src/app/components/configuration/department/add-department/add-department.component.html
+++ b/frontend/src/app/components/configuration/department/add-department/add-department.component.html
@@ -1,3 +1,51 @@
-<p>
-  add-department works!
-</p>
+<div class="card container">
+  <div class="card-header-pills">
+    <h3 align="center" style="font-family: 'Righteous', cursive;">Add Department</h3>
+  </div>
+  <div class="card-body">
+    <div class="row">
+
+      <div class="form-group col-md-6">
+        <label>Department Name</label>
+        <input type="text" class="form-control" placeholder="dept name" name="departmentName" [(ngModel)]="departmentField.departmentName">
+      </div>
+
+      <div class="form-group col-md-6">
+        <label>Department Level</label>
+        <input type="number" class="form-control" placeholder="level" name="deptLevel">
+      </div>
+
+      <div class="form-group col-md-2" *ngIf="checkId();else other_content">
+        <button class="btn btn-success" (click)="onSubmit()">Insert</button>
+      </div>
+
+      <ng-template #other_content>
+        <div class="form-group col-md-2">
+          <button class="btn btn-success" (click)="onSubmit()">Update</button>
+        </div>
+      </ng-template>
+      <div class="form-group col-md-2">
+        <button class="btn btn-danger" (click)="reset()">Reset</button>
+      </div>
+
+    </div>
+
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th>Department Name</th>
+        <th>Action</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let dept of departments">
+        <td>{{dept.departmentName}}</td>
+        <td>
+          <!--<button class="btn btn-danger" (click)="deleteUser(user)"> Delete</button>-->
+          <button class="btn btn-danger" (click)="editDept(dept)" style="margin-left: 20px;"> Edit</button>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
