--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -170,6 +170,13 @@
 
                 </ul>
               </li>
+              <li class="has-submenu" *ngxPermissionsOnly="['admin']">
+                <a href="#">Roster</a>
+                <ul class="submenu">
+                  <li><a routerLink="configuration/shift">All Roster</a></li>
+
+                </ul>
+              </li>
 
 
 
