--- a/frontend/src/app/components/configuration/department/add-department/add-department.component.html
+++ b/frontend/src/app/components/configuration/department/add-department/add-department.component.html
@@ -5,7 +5,17 @@
   <div class="card-body">
     <div class="row">
 
-      <div class="form-group col-md-12">
+      <div class="form-group col-md-6">
+        <label>Company Name</label>
+        <select class="form-control" name="fkCompanyId">
+          <option value="">Select Company</option>
+          <option *ngFor="let comp of company" [value]="comp.id">
+            {{comp.companyName}}
+          </option>
+        </select>
+      </div>
+
+      <div class="form-group col-md-6">
         <label>Department Name</label>
         <input type="text" class="form-control" placeholder="dept name" name="departmentName" [(ngModel)]="departmentField.departmentName">
       </div>
@@ -30,50 +40,6 @@
 
     </div>
 
-<!--    <table class="table table-striped">-->
-<!--      <thead>-->
-<!--      <tr>-->
-<!--        <th>Department Name</th>-->
-<!--        <th>Action</th>-->
-<!--      </tr>-->
-<!--      </thead>-->
-<!--      <tbody>-->
-<!--      <tr *ngFor="let dept of departments">-->
-<!--        <td>{{dept.departmentName}}</td>-->
-<!--        <td>-->
-<!--          &lt;!&ndash;<button class="btn btn-danger" (click)="deleteUser(user)"> Delete</button>&ndash;&gt;-->
-<!--          <button class="btn btn-danger" (click)="editDept(dept)" style="margin-left: 20px;"> Edit</button>-->
-<!--        </td>-->
-<!--      </tr>-->
-<!--      </tbody>-->
-<!--    </table>-->
-
-    <div class="card-body">
-
-      <table datatable  id="example" class="table" [dtOptions]="dtOptions" [dtTrigger]="dtTeigger">
-        <thead>
-        <tr>
-          <th>Department Name</th>
-          <th>Action</th>
-        </tr>
-
-        </thead>
-        <tbody >
-
-        <tr *ngFor="let dept of departments">
-          <td>{{dept.departmentName}}</td>
-          <td>
-            <!--<button class="btn btn-danger" (click)="deleteUser(user)"> Delete</button>-->
-            <button class="btn btn-danger" (click)="editDept(dept)" style="margin-left: 20px;"> Edit</button>
-          </td>
-        </tr>
-
-        </tbody>
-
-      </table>
-
-
-    </div>
 
   </div>
 </div>
