--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -159,8 +159,8 @@
               <li class="has-submenu" *ngxPermissionsOnly="['admin']">
                 <a href="#">Roster</a>
                 <ul class="submenu">
-                  <li><a >All Roster</a></li>
-                  <li><a >Shift Roster</a></li>
+                  <li><a routerLink="configuration/shift">All Roster</a></li>
+                  <li><a routerLink="configuration/shift/assign">Shift Roster</a></li>
                 </ul>
               </li>
               <li class="has-submenu" *ngxPermissionsOnly="['admin']">
@@ -170,13 +170,13 @@
 
                 </ul>
               </li>
-              <li class="has-submenu" *ngxPermissionsOnly="['admin']">
-                <a href="#">Roster</a>
-                <ul class="submenu">
-                  <li><a routerLink="configuration/shift">All Roster</a></li>
+<!--              <li class="has-submenu" *ngxPermissionsOnly="['admin']">-->
+<!--                <a href="#">Roster</a>-->
+<!--                <ul class="submenu">-->
+<!--                  <li><a routerLink="configuration/shift">All Roster</a></li>-->
 
-                </ul>
-              </li>
+<!--                </ul>-->
+<!--              </li>-->
 
 
 
