--- a/frontend/src/app/components/configuration/shift-assign/shift-assign.component.html
+++ b/frontend/src/app/components/configuration/shift-assign/shift-assign.component.html
@@ -68,7 +68,8 @@
       <div class="row" *ngIf="showAssign">
         <div class="form-group">
           <label style="text-align: center">Assig shift</label>
-          <table class="table table-bordered table-responsive">
+          <div class="table-responsive">
+          <table class="table table-bordered">
 
             <tr>
 
@@ -93,6 +94,7 @@
             </tr>
 
           </table>
+          </div>
         </div>
       </div>
       <div class="row">
@@ -112,7 +114,7 @@
           <th>Last Name</th>
           <th>Employee ID</th>
 <!--          <th>Shift Name</th>-->
-          <th>Weekend</th>
+<!--          <th>Weekend</th>-->
 <!--          <th>Shift Start</th>-->
 
         </tr>
