--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -161,6 +161,7 @@
                 <ul class="submenu">
                   <li><a routerLink="configuration/shift">All Roster</a></li>
                   <li><a routerLink="configuration/shift/assign">Shift Roster</a></li>
+                  <li><a target="_blank" routerLink="configuration/shift/edit-assign">Edit Shift Roster</a></li>
                 </ul>
               </li>
               <li class="has-submenu" *ngxPermissionsOnly="['admin']">
