--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -160,8 +160,8 @@
                 <a href="#">Roster</a>
                 <ul class="submenu">
                   <li><a routerLink="configuration/shift">All Roster</a></li>
-                  <li><a routerLink="configuration/shift/assign">Shift Roster</a></li>
-                  <li><a target="_blank" routerLink="configuration/shift/edit-assign">Edit Shift Roster</a></li>
+<!--                  <li><a routerLink="configuration/shift/assign">Shift Roster</a></li>-->
+                  <li><a routerLink="configuration/shift/edit-assign">Roster</a></li>
                 </ul>
               </li>
               <li class="has-submenu" *ngxPermissionsOnly="['admin']">
