--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -197,7 +197,7 @@
             <a href="#"><i class="fa fa-chart"></i>Report</a>
             <ul class="submenu">
               <li class="">
-                <a >Attendance</a>
+                <a routerLink="report/attendance">Attendance</a>
 
               </li>
             </ul>
