--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -161,7 +161,7 @@
                 <ul class="submenu">
                   <li><a routerLink="configuration/shift">All Roster</a></li>
 <!--                  <li><a routerLink="configuration/shift/assign">Shift Roster</a></li>-->
-                  <li><a routerLink="configuration/shift/edit-assign">Roster</a></li>
+                  <li><a routerLink="configuration/shift/edit-assign">Roster Assign</a></li>
                 </ul>
               </li>
               <li class="has-submenu" *ngxPermissionsOnly="['admin']">
