--- a/frontend/src/app/components/configuration/edit-assigned-shift/edit-assigned-shift.component.html
+++ b/frontend/src/app/components/configuration/edit-assigned-shift/edit-assigned-shift.component.html
@@ -128,7 +128,7 @@
                     {{asgL['shiftName']}}
                   </td>
                   <td>
-                    <button class="btn btn-info" (click)="edit(asgL['shiftLogId'],content)"> Edit</button> &nbsp;&nbsp;
+                    <button class="btn btn-info" (click)="edit(asgL['shiftLogId'],asgL['date'],asgL['empId'],content)"> Edit</button> &nbsp;&nbsp;
                     <button class="btn btn-info" (click)="delete(asgL['shiftLogId'],asgL['date'],asgL['empId'])"> Delete</button>
                   </td>
 
