--- a/frontend/src/app/components/configuration/edit-assigned-shift/edit-assigned-shift.component.html
+++ b/frontend/src/app/components/configuration/edit-assigned-shift/edit-assigned-shift.component.html
@@ -8,6 +8,8 @@
   </div>
   <div class="modal-body">
 
+
+
     <div class="row">
       <div class="form-group col-md-6">
         <label>Shift</label>
@@ -32,14 +34,48 @@
 
       </div>
       <div class="form-group col-md-6">
+        <label>UserId</label>
+        <input type="text" readonly [(ngModel)]="shiftObj.deviceUserId" class="form-control">
+
+      </div>
+      <div class="form-group col-md-6">
+        <label>In Time</label>
+        <input type="time" [(ngModel)]="shiftObj.inTime" class="form-control">
+      </div>
+      <div class="form-group col-md-6">
+        <label>Out Time</label>
+        <input type="time" [(ngModel)]="shiftObj.outTime" class="form-control">
+      </div>
+      <div class="form-group col-md-6">
+        <div class="checkbox">
+          <label><input type="checkbox" (change)="toggleAdjustment($event)" [(ngModel)]="shiftObj.adjustment" >Adjustment</label>
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox" (change)="toggleLeave($event)" [(ngModel)]="shiftObj.leave" >Leave</label>
+        </div>
+
+      </div>
+
+      <div id="adjustmentDate" *ngIf="AdjustmentCheckBox" class="form-group col-md-6">
+        <label>Adjustment Date</label>
+        <input bsDatepicker
+               [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" [(ngModel)]="shiftObj.adjustmentDate" name="adjustmentDate"  autocomplete="off" class="form-control">
+      </div>
+
+
+
+
+      <div style="display: none" class="form-group col-md-6">
         <label>shift Log Id</label>
         <input type="text" readonly [(ngModel)]="shiftObj.shiftLogId" class="form-control">
       </div>
-      <div class="form-group col-md-6">
+
+      <div style="display: none" class="form-group col-md-6">
         <label>EmpId</label>
         <input type="text" readonly [(ngModel)]="shiftObj.empId" class="form-control">
 
       </div>
+
       <div class="form-group col-md-6">
         <label>date</label>
 
