--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -145,7 +145,7 @@
               <li class="has-submenu" *ngxPermissionsOnly="['admin']">
                 <a href="#">Employee</a>
                 <ul class="submenu">
-                  <li><a>Employee</a></li>
+                  <li><a routerLink="employee" >Employee</a></li>
                   <!--                  <li><a routerLink="employee/past">Past Employee</a></li>-->
                   <!--                  <li><a routerLink="employee/add">Add Employee</a></li>-->
                 </ul>
