--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -171,6 +171,8 @@
 
                 </ul>
               </li>
+
+
 <!--              <li class="has-submenu" *ngxPermissionsOnly="['admin']">-->
 <!--                <a href="#">Roster</a>-->
 <!--                <ul class="submenu">-->
@@ -200,6 +202,16 @@
                 <a routerLink="report/attendance">Attendance</a>
 
               </li>
+            </ul>
+          </li>
+
+          <li class="has-submenu">
+            <a href="#">Leave</a>
+            <ul class="submenu">
+              <li><a routerLink="leave/apply">Apply Leave</a></li>
+              <li><a routerLink="configuration/leave" *ngxPermissionsOnly="['admin']">Create Leave</a></li>
+              <!--                  <li><a routerLink="configuration/leave/show" *ngxPermissionsOnly="['admin']">Show Leave</a></li>-->
+              <!--                  <li><a routerLink="leave/summery" *ngxPermissionsOnly="['admin']">Leave Summery</a></li>-->
             </ul>
           </li>
 
