--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -208,7 +208,7 @@
           <li class="has-submenu">
             <a href="#">Leave</a>
             <ul class="submenu">
-              <li><a routerLink="leave/apply">Apply Leave</a></li>
+<!--              <li><a routerLink="leave/apply">Apply Leave</a></li>-->
               <li><a routerLink="configuration/leave" *ngxPermissionsOnly="['admin']">Create Leave</a></li>
               <!--                  <li><a routerLink="configuration/leave/show" *ngxPermissionsOnly="['admin']">Show Leave</a></li>-->
               <!--                  <li><a routerLink="leave/summery" *ngxPermissionsOnly="['admin']">Leave Summery</a></li>-->
