--- a/frontend/src/app/components/configuration/edit-assigned-shift/edit-assigned-shift.component.html
+++ b/frontend/src/app/components/configuration/edit-assigned-shift/edit-assigned-shift.component.html
@@ -184,6 +184,7 @@
             [(ngModel)]="selectedItems"
             [settings]="dropdownSettings"
             (onSelect)="onItemSelect($event)"
+            (onDeSelect)="onItemDeSelect($event)"
 
 
           >
