--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -31,7 +31,7 @@
           <br>
 
           <button class="btn btn-info pull-right" (click)="generateDetailsExcel()" *ngxPermissionsOnly="['admin']">Generate Details Report</button>&nbsp;&nbsp;
-<!--          <button class="btn btn-info pull-right" (click)="generateINOUTExcel()" *ngxPermissionsOnly="['admin']">Report (only in/out )</button>-->
+          <button class="btn btn-info pull-right" (click)="generateINOUTExcel()" *ngxPermissionsOnly="['admin']">Report (only in/out )</button>
           &nbsp;
         </div>
 
